--- a/css/mikey.css
+++ b/css/mikey.css
@@ -824,5 +824,81 @@ filter: alpha(opacity=100);
 	background-color: transparent;
 }
 
+/* ----------- RESPONSE BOX --------------------- */
+
+.response-box {
+	color: #222;
+	font-size: 13px;
+	padding: 6px 12px 6px 12px;
+	background-color: #e3eefd;
+	display: inline-block;
+	line-height: 18px;
+
+}
+
+.profile-image {
+	width: 34px;
+	height: 34px;
+	float: left;
+	border-radius: 30px;
+	margin-right: 10px;
+	margin-top: 0px;
+}
+
+.response-bg {
+	background-color: transparent;
+	padding: 60px;
+}
+
+.bubble 
+{
+position: relative;
+-webkit-border-radius: 0px;
+-moz-border-radius: 0px;
+border-radius: 0px;
+color: #222;
+font-size: 12px;
+padding: 8px 14px 8px 14px;
+background-color: #dfeeff;
+display: inline-block;
+line-height: 18px;
+}
+
+/* .bubble:after 
+{
+content: "";
+position: absolute;
+top: 8px;
+left: -8px;
+border-style: solid;
+border-width: 8px 8px 8px 0;
+border-color: transparent #dfeeff;
+display: block;
+width: 0;
+z-index: 1;
+}
+*/
 
 
+.sent-by {
+	text-transform: uppercase;
+	font-size: 10px;
+	letter-spacing: 1px;
+	margin-top: 40px;
+	font-weight: bold;
+	color: #222;
+	display: block;
+}
+
+.span1 {
+width: 30px;
+}
+
+.span8 {
+	width: 80%;
+	margin-left: 6px;
+}
+
+.mm-table {
+	margin-bottom: 60px;
+}
