--- a/css/mikey.css
+++ b/css/mikey.css
@@ -1,5 +1,4 @@
 a {
-	text-decoration: underline;
 	color:#2c75ab;
 }
 
@@ -619,11 +618,12 @@ h1 {
 }
 
 h1.home {
-	color: #67869E;
+	color: #4D97D0;
 	text-transform: uppercase;
 	font-size: 18px;
 	text-align: center;
-	padding-top: 0px;
+	margin-top: 20px;
+	margin-bottom: 40px;
 
 }
 
@@ -644,11 +644,12 @@ h1.home {
 
 
 .two-band.home {
-	background-color: #a5d1ed;
+	background-color: #B7DAEF;
+	
 }
 
 .three-band {
-	background-color: #C0E0F8;
+	background-color: #EBF6FC;
 	padding-bottom: 40px;
 
 }
@@ -750,12 +751,13 @@ background: rgba(20, 88, 122, 1.0);
 position: absolute;
 top: 50%;
 left: 15px;
-width: 40px;
+width: 44px;
 height: 40px;
 margin-top: -30px;
 font-size: 60px;
 font-weight: 100;
 line-height: 30px;
+padding-bottom: 4px;
 color: #FFF;
 text-align: center;
 background: #2D7CAD;
@@ -823,7 +825,7 @@ filter: alpha(opacity=100);
 }
 
 .footer.home {
-	background-color: transparent;
+	background-color: #fff;
 }
 
 /* ----------- RESPONSE BOX --------------------- */
@@ -900,4 +902,92 @@ width: 30px;
 	margin-left: 6px;
 }
 
+/* ------------------ TESTIMONIALS ------------------------ */
+
+.test-user {
+	padding: 0px 0px 0px 10px;
+}
+
+.test-text 
+{
+position: relative;
+padding: 16px 20px 16px 20px;
+background: #FFFFFF;
+-webkit-border-radius: 0px;
+-moz-border-radius: 0px;
+border-radius: 0px;
+font-family: 'Rokkitt', serif;
+font-size: 30px;
+line-height: 30px;
+margin-bottom: 20px;
+}
+
+.test-text.small 
+{
+font-size: 20px;
+line-height: 20px;
+}
+
+.test-text.big {
+font-size: 40px;
+line-height: 40px;
+-webkit-hyphens: auto;
+-moz-hyphens: auto;
+hyphens: auto;
+}
+
+.test-text:after 
+{
+content: "";
+position: absolute;
+bottom: -12px;
+left: 33px;
+border-style: solid;
+border-width: 12px 12px 0;
+border-color: #FFFFFF transparent;
+display: block;
+width: 0;
+z-index: 1;
+}
+
+.test-user-image {
+	width: 60px;
+	-webkit-border-radius: 500px;
+	-moz-border-radius: 500px;
+	display: inline-block;
+	overflow: hidden;
+	margin-right: 20px;
+	float: left;
+	border: 4px solid #fff;
+}
+
+.test-user-name {
+	display: block;
+	font-size: 16px;
+	line-height: 20px;
+	font-weight: 700;
+	padding-top: 10px;
+}
+
+.test-sub {
+	display: inline-block;
+	font-size: 14px;
+	line-height: 18px;
+}
+
+.star {
+	background-image: url(../img/star.png);
+	width: 14px;
+	height: 14px;
+	background-repeat: no-repeat;
+	border: none;
+	display: inline-block;
+	margin-right: -3px;
+
+}
+
+.test-quote {
+	display: block;
+	margin-bottom: 30px;
+}
 
